class Activity {
	constructor(name, duration, date, location) {
		this.name = name
		this.duration = duration
		this.date = date
		this.location = location
	}
}

/* const ActivitiesName = {
	Name: 'name',
}
const ActivitiesTime = {
	Time: 'time',
}
const ActivitiesLocation = {
	location: 'location',
} */

module.exports = Activity
