class PackingThing {
	constructor(name, status) {
		this.name = name
		this.status = status
	}
}
module.exports = PackingThing
